Testes atualizados