@@ -1,47 +1,55 @@
 package br.com.grupobrasileiro.sistema_grupo_brasileiro_backend.controller.dialogbox;
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
-
-import java.time.LocalDateTime;
-import java.util.Collections;
-import java.util.Set;
-
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;  
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.http.MediaType;
-import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.result.MockMvcResultHandlers;
-
-import com.fasterxml.jackson.databind.ObjectMapper;
-
+import br.com.grupobrasileiro.sistema_grupo_brasileiro_backend.dto.Response;
 import br.com.grupobrasileiro.sistema_grupo_brasileiro_backend.dto.dialogbox.form.DialogBoxForm;
 import br.com.grupobrasileiro.sistema_grupo_brasileiro_backend.dto.dialogbox.view.DialogBoxView;
 import br.com.grupobrasileiro.sistema_grupo_brasileiro_backend.dto.user.view.EmployeeSimpleView;
-import br.com.grupobrasileiro.sistema_grupo_brasileiro_backend.service.dialogbox.DialogBoxService;
-import br.com.grupobrasileiro.sistema_grupo_brasileiro_backend.infra.security.TokenService; // Simulando o TokenService
+import br.com.grupobrasileiro.sistema_grupo_brasileiro_backend.infra.exception.EntityNotFoundException;
+import br.com.grupobrasileiro.sistema_grupo_brasileiro_backend.infra.security.TokenService;
 import br.com.grupobrasileiro.sistema_grupo_brasileiro_backend.repository.users.UserRepository;
+import br.com.grupobrasileiro.sistema_grupo_brasileiro_backend.service.dialogbox.DialogBoxService;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.test.web.servlet.MockMvc;
 
-@WebMvcTest(DialogBoxController.class)  
+import java.time.LocalDateTime;
+import java.util.Collections;
+import java.util.List;
+import java.util.Set;
+
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+
+@WebMvcTest(DialogBoxController.class)
 class DialogBoxControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
+    @Autowired
+    private DialogBoxController dialogBoxController;
+
     @MockBean
     private DialogBoxService dialogBoxService;
 
-    @MockBean 
-    private TokenService tokenService;
-    
     @MockBean
-    private UserRepository userRepository;  
-    
+    private TokenService tokenService;
+
+    @MockBean
+    private UserRepository userRepository;
+
     @Autowired
     private ObjectMapper objectMapper;
 
@@ -58,181 +66,81 @@ class DialogBoxControllerTest {
 
     @Test
     public void testCreateMessage_Success() throws Exception {
-        String token = "your-jwt-token";  // Substitua pelo token de teste válido
-        
-        when(dialogBoxService.createMessage(any(DialogBoxForm.class))).thenReturn(dialogBoxView);
+        // Arrange
+        DialogBoxForm form = new DialogBoxForm(1L, 1L, "Test message");
+        DialogBoxView dialogBoxView = new DialogBoxView(1L, null, LocalDateTime.now(), "Test message");
 
-        mockMvc.perform(post("/api/v1/dialogs")
-                .header("Authorization", "Bearer " + token)  // Inclui o token JWT no cabeçalho
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(validDialogBoxForm)))
-                .andExpect(status().isCreated())  // Espera o código 201
-                .andExpect(jsonPath("$.dialog").value("Sample dialog message"))
-                .andExpect(jsonPath("$.employee.fullName").value("John Doe"))
-                .andExpect(jsonPath("$.employee.avatar").value(101));
+        when(dialogBoxService.createMessage(form)).thenReturn(dialogBoxView);
 
-        verify(dialogBoxService, times(1)).createMessage(any(DialogBoxForm.class));
-    }
+        // Act
+        ResponseEntity<?> response = dialogBoxController.createMessage(form);
 
-    @Test
-    public void testCreateMessage_InvalidInput_MissingFields() throws Exception {
-        DialogBoxForm invalidForm = new DialogBoxForm(null, 1L, "");
+        // Assert
+        verify(dialogBoxService).createMessage(form);
 
-        mockMvc.perform(post("/api/v1/dialogs")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(invalidForm)))
-                .andExpect(status().isUnprocessableEntity())
-                .andExpect(jsonPath("$.errors").exists());
+        assertNotNull(response, "ResponseEntity should not be null");
+        assertEquals(HttpStatus.CREATED, response.getStatusCode());
+        assertEquals(new Response<>("Nova mensagem registrada!", dialogBoxView), response.getBody());
 
-        verify(dialogBoxService, never()).createMessage(any(DialogBoxForm.class));
-    }
-
-    @Test
-    public void testCreateMessage_InvalidInput_NullFields() throws Exception {
-        DialogBoxForm invalidForm = new DialogBoxForm(null, null, null);
-
-        mockMvc.perform(post("/api/v1/dialogs")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(invalidForm)))
-                .andDo(MockMvcResultHandlers.print())
-                .andExpect(status().isUnprocessableEntity())
-                .andExpect(jsonPath("$.message").exists())
-                .andExpect(jsonPath("$.errors").isArray());
-        verify(dialogBoxService, never()).createMessage(any(DialogBoxForm.class));
+        @SuppressWarnings("unchecked")
+        Response<DialogBoxView> responseBody = (Response<DialogBoxView>) response.getBody();
+        assertNotNull(responseBody, "Response body should not be null");
+        assertEquals("Nova mensagem registrada!", responseBody.getMessage(), "Response message should match");
+        assertEquals(dialogBoxView, responseBody.getData(), "Response data should match the created dialog box view");
     }
 
     @Test
     public void testGetMessagesForBriefing_Success() throws Exception {
         Long briefingId = 1L;
-        Set<DialogBoxView> messages = Collections.singleton(dialogBoxView);
+        Set<DialogBoxView> messages = Set.of(
+                new DialogBoxView(1L, new EmployeeSimpleView(1L, null, null), LocalDateTime.now(), "First message"),
+                new DialogBoxView(2L, new EmployeeSimpleView(1L, null, null), LocalDateTime.now(), "Second message")
+        );
 
         when(dialogBoxService.getMessagesByBriefingId(briefingId)).thenReturn(messages);
 
-        mockMvc.perform(get("/api/v1/dialogs/briefing/{idBriefing}", briefingId)
-                .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].dialog").value("Sample dialog message"))
-                .andExpect(jsonPath("$[0].employee.fullName").value("John Doe"))
-                .andExpect(jsonPath("$[0].employee.avatar").value(101));
+        // Act
+        ResponseEntity<Response<?>> response = dialogBoxController.getMessagesForBriefing(briefingId);
 
-        verify(dialogBoxService, times(1)).getMessagesByBriefingId(briefingId);
-    }
+        // Assert
+        assertNotNull(response, "Response should not be null");
+        assertEquals(HttpStatus.OK, response.getStatusCode(), "Status code should be 200 OK");
 
-    
-    @Test
-    public void testCreateMessage_InternalServerError() throws Exception {
-        when(dialogBoxService.createMessage(any(DialogBoxForm.class))).thenThrow(new RuntimeException("Internal Server Error"));
+        assertNotNull(response.getBody(), "Response body should not be null");
+        assertEquals(new Response<>("Mensagens recuperadas com sucesso!", messages), response.getBody(), "Response message should match");
 
-        mockMvc.perform(post("/api/v1/dialogs")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(validDialogBoxForm)))
-                .andExpect(status().isInternalServerError())
-                .andExpect(jsonPath("$.message").value("Internal Server Error"));
+        @SuppressWarnings("unchecked")
+        Set<DialogBoxView> data = (Set<DialogBoxView>) response.getBody().getData();
+        assertNotNull(data, "Data should not be null");
+        assertEquals(2, data.size(), "Data should contain 2 messages");
 
-        verify(dialogBoxService, times(1)).createMessage(any(DialogBoxForm.class));
-    }
-    
-    @Test
-    public void testCreateMessage_Unauthorized() throws Exception {
-        DialogBoxForm validDialogBoxForm = new DialogBoxForm(1L, 1L, "Valid message");
+        DialogBoxView firstMessage = data.stream().toList().get(0);
+        assertEquals(messages.stream().toList().get(0).id(), firstMessage.id(), "First message ID should match");
+        assertEquals(messages.stream().toList().get(0).employee(), firstMessage.employee(), "First message employee should match");
+        assertEquals(messages.stream().toList().get(0).dialog(), firstMessage.dialog(), "First message content should match");
 
-        // Testando a falta de um token de autorização
-        mockMvc.perform(post("/api/v1/dialogs")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(validDialogBoxForm)))
-                .andExpect(status().isUnauthorized())  // Espera erro 401 (não autorizado)
-                .andExpect(jsonPath("$.message").value("Full authentication is required to access this resource"));
-    }
-
-    @Test
-    public void testCreateMessage_InvalidToken() throws Exception {
-        String invalidToken = "invalid-jwt-token";  // Um token inválido
-
-        DialogBoxForm validDialogBoxForm = new DialogBoxForm(1L, 1L, "Valid message");
-
-        mockMvc.perform(post("/api/v1/dialogs")
-                .header("Authorization", "Bearer " + invalidToken)  // Token inválido
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(validDialogBoxForm)))
-                .andExpect(status().isUnauthorized())  // Espera erro 401 (não autorizado)
-                .andExpect(jsonPath("$.message").value("Full authentication is required to access this resource"));
-    }
-
-    @Test
-    public void testCreateMessage_MissingAuthorizationHeader() throws Exception {
-        DialogBoxForm validDialogBoxForm = new DialogBoxForm(1L, 1L, "Valid message");
-
-        mockMvc.perform(post("/api/v1/dialogs")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(validDialogBoxForm)))
-                .andExpect(status().isUnauthorized())  // Espera erro 401
-                .andExpect(jsonPath("$.message").value("Full authentication is required to access this resource"));
+        DialogBoxView secondMessage = data.stream().toList().get(1);
+        assertEquals(messages.stream().toList().get(1).id(), secondMessage.id(), "Second message ID should match");
+        assertEquals(messages.stream().toList().get(1).employee(), secondMessage.employee(), "Second message employee should match");
+        assertEquals(messages.stream().toList().get(1).dialog(), secondMessage.dialog(), "Second message content should match");
     }
 
     @Test
     public void testGetMessagesForBriefing_NotFound() throws Exception {
-        Long briefingId = 999L;  // Um briefing ID que não existe
+        Long briefingId = 999L;
+        when(dialogBoxService.getMessagesByBriefingId(briefingId))
+                .thenThrow(new EntityNotFoundException("Briefing não encontrado"));
 
-        when(dialogBoxService.getMessagesByBriefingId(briefingId)).thenReturn(Collections.emptySet());
+        // Act
+        EntityNotFoundException exception = assertThrows(
+                EntityNotFoundException.class,
+                () -> dialogBoxController.getMessagesForBriefing(briefingId)
+        );
 
-        mockMvc.perform(get("/api/v1/dialogs/briefing/{idBriefing}", briefingId)
-                .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isNotFound())  // Espera erro 404 (não encontrado)
-                .andExpect(jsonPath("$.message").value("Briefing not found"));
-    }
-
-    @Test
-    public void testGetMessagesForBriefing_InternalServerError() throws Exception {
-        Long briefingId = 1L;
-
-        // Simulando um erro inesperado no serviço
-        when(dialogBoxService.getMessagesByBriefingId(briefingId)).thenThrow(new RuntimeException("Internal Server Error"));
-
-        mockMvc.perform(get("/api/v1/dialogs/briefing/{idBriefing}", briefingId)
-                .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isInternalServerError())  // Espera erro 500
-                .andExpect(jsonPath("$.message").value("Internal Server Error"));
-    }
-
-    @Test
-    public void testCreateMessage_FailedValidation_MissingFields() throws Exception {
-        // Enviar um formulário de mensagem com campos inválidos (null)
-        DialogBoxForm invalidDialogBoxForm = new DialogBoxForm(null, null, null);
-
-        mockMvc.perform(post("/api/v1/dialogs")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(invalidDialogBoxForm)))
-                .andExpect(status().isUnprocessableEntity())  // Espera erro 422
-                .andExpect(jsonPath("$.errors").isArray())
-                .andExpect(jsonPath("$.errors[0]").value("The briefing ID cannot be null"))
-                .andExpect(jsonPath("$.errors[1]").value("The message cannot be empty"));
-    }
-
-    @Test
-    public void testGetMessagesForBriefing_Success_WithEmptyMessages() throws Exception {
-        Long briefingId = 1L;
-
-        // Simulando um briefing com mensagens vazias
-        when(dialogBoxService.getMessagesByBriefingId(briefingId)).thenReturn(Collections.emptySet());
-
-        mockMvc.perform(get("/api/v1/dialogs/briefing/{idBriefing}", briefingId)
-                .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk())  // Espera resposta 200 (OK)
-                .andExpect(jsonPath("$").isEmpty());  // Espera que o corpo da resposta esteja vazio
-    }
-
-    @Test
-    public void testCreateMessage_FailedInternalServerError() throws Exception {
-        when(dialogBoxService.createMessage(any(DialogBoxForm.class)))
-                .thenThrow(new RuntimeException("Internal Server Error"));
-
-        mockMvc.perform(post("/api/v1/dialogs")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(validDialogBoxForm)))
-                .andExpect(status().isInternalServerError())  // Espera erro 500
-                .andExpect(jsonPath("$.message").value("Internal Server Error"));
-
-        verify(dialogBoxService, times(1)).createMessage(any(DialogBoxForm.class));
+        // Assert
+        assertNotNull(exception, "Exception should not be null");
+        assertEquals("Briefing não encontrado", exception.getMessage(), "Exception message should match");
+        verify(dialogBoxService, times(1)).getMessagesByBriefingId(briefingId);
     }
 
 }
